--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "JS dev environment starter kit",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+		"prestart": "node build/scripts/startMsg.js",
+    "start": "npm-run-all --parallel security-check open:src",
+		"open:src": "node build/scripts/server.js",
+		"security-check": "nsp check",
+		"localtunnel": "lt --port 3000",
+		"share": "npm-run-all --parallel open:src localtunnel"
   },
   "author": "John Holman",
   "license": "MIT",
