--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
 		"prestart": "babel-node build/scripts/startMsg.js",
-    "start": "npm-run-all --parallel security-check open:src",
+    "start": "npm-run-all --parallel security-check open:src lint:watch",
 		"open:src": "babel-node build/scripts/server.js",
+		"lint": "esw webpack.config.* src build scripts --color",
+		"lint:watch": "npm run lint -- --watch",
 		"security-check": "nsp check",
 		"localtunnel": "lt --port 3000",
 		"share": "npm-run-all --parallel open:src localtunnel"
